# fbi

./: core.py  pyproject.toml
parsers/: coralie_ccf.py  coralie_s1d.py  coralie_s2d.py  registry.py  utils.py
src/: autodetect.py
src/fbi/: __init__.py  autodetect.py  core.py
src/fbi/parsers/: __init__.py  coralie_ccf.py  coralie_s1d.py  coralie_s2d.py
src/parsers/: __init__.py
